--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -10,8 +10,8 @@
     <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script>
   </head>
   <body>
-  <div id="heightMap" style="width: 1024; height: 1024; position: fixed; left: 99999px; top=0;"></div>          
-  <div id="orthoMap" style="width: 1024; height: 1024; position: fixed; left: 99999px; top=0;"></div>          
+  <div id="heightMap" style="width: 1024; height: 1024; position: fixed; left: 9999px; top=0;"></div>
+  <div id="map" style="width: 1024; height: 1024; position: fixed; left: 99999px; top=0;"></div> 
     <a-scene>
       <a-assets>
   
@@ -19,7 +19,10 @@
       </a-assets>
 
 
-      <a-entity tangram-heightmap="map: #heightMap"></a-entity>
+      <a-entity visible="true" tangram-heightmap="heightMap: #heightMap"></a-entity>
+      <!--<a-entity geometry="primitive: tangram-heightmap-geometry; map: #heightMap;"
+        material="wireframe:true; color: red;"
+        ></a-entity>-->
 
 
     </a-scene>
