--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -12,14 +12,15 @@
 
     <script src="./collider-check.js"></script>
     <script src="./add-markers.js"></script>
+    <script src="./map-look-controls.js"></script>
   </head>
   <body>
   <div id="heightMap" style="width: 128; height: 128; position: fixed; left: 9999px; top=0;"></div>
   <div id="map" style="width: 4096; height: 4096; position: fixed; left: 99999px; top=0;"></div> 
     <a-scene >
       <a-assets>
-        <a-asset-item id="geo-markers" src="markers.geojson" />
-        
+        <a-asset-item id="geo-markers" src="assets/markers.geojson" />
+        <img id="img-compass-wheel" src="assets/compass-wheel.png" />
       </a-assets>
  
       <a-entity id="terrain" visible="true"  class="interactive" 
@@ -46,9 +47,13 @@
 
       <a-entity id="player"  collider-check="heightmap: #terrain;">
 
-        <a-camera id="camera" user-height="0" wasd-controls-enabled="true" look-controls-enabled="true" 
+        <a-camera id="camera" user-height="0.4" wasd-controls-enabled="true" look-controls-enabled="true" 
         >
 
+        <a-entity position="0 -2 -3" rotation="-90 0 0">
+          <a-entity geometry="primitive: box; height: 0.5; width: 0.1; depth: 0.05" material="color: #FCB514" position="0 0 0"></a-entity>
+          <a-image map-look-controls="#camera" src="#img-compass-wheel"></a-image>
+        </a-entity>
 
           <a-cursor></a-cursor>
 
