--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -18,6 +18,7 @@
       <a-assets>
         <a-asset-item id="geo-markers" src="assets/markers.geojson" />
         <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
+        <a-asset-item id="yaml-walkabout-style" src="assets/walkabout-style.yaml" />
         <img id="img-compass-wheel" src="assets/compass-wheel.png" />
       </a-assets>
  
@@ -46,9 +47,10 @@
           <a-entity geometry="primitive: box; height: 0.5; width: 0.1; depth: 0.05" material="color: #FCB514" position="0 0 0"></a-entity>
           <a-image map-look-controls="#camera" src="#img-compass-wheel"></a-image>
         </a-entity>
-        <a-entity position="0 2 3" rotaiton="-90 0 0">
+        <a-entity position="0 2 -3" rotaiton="-90 0 0">
           <a-entity geometry="primitive: plane; width: 3; height: 3;"
           tangram="asHeightMap: false;"
+          material="color: #00ffff; shader: flat; side: both; transparent: true;"
           >
           </a-entity>
         </a-entity>
