need to fix canvas buffer

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -47,7 +47,7 @@
           <a-entity geometry="primitive: box; height: 0.5; width: 0.1; depth: 0.05" material="color: #FCB514" position="0 0 0"></a-entity>
           <a-image map-look-controls="#camera" src="#img-compass-wheel"></a-image>
         </a-entity>
-        <a-entity position="0 2 -3" rotaiton="-90 0 0">
+        <a-entity id="hud-map" position="0 2 -5" rotation="0 0 0">
           <a-entity geometry="primitive: plane; width: 3; height: 3;"
           tangram="asHeightMap: false;"
           material="color: #00ffff; shader: flat; side: both; transparent: true;"
