--- a/examples/index.html
+++ b/examples/index.html
@@ -23,7 +23,13 @@
   <body>
     <h1>A-Frame Tangram Component</h1>
     <a href="basic/">Basic</a>
-    <p>This is a basic example.</p>
+    <p>This is a basic map example.</p>
+    <a href="heightmap/">Heightmap</a>
+    <p>This is a heightmap example.</p>
+    <a href="geocache/">Geocache</a>
+    <p>This is a Geocaching example.</p>
+    <a href="points/">Points</a>
+    <p>This is a points example made out of an abstract map.</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
