--- a/examples/geocache/index.html
+++ b/examples/geocache/index.html
@@ -34,6 +34,7 @@
       center: 15.8056, 47.7671;
       zoom: 9;
       wireframe: false;
+      pxToWorldRatio: 30;
       " 
 
       
@@ -48,12 +49,11 @@
         <a-camera id="camera" user-height="0.4" wasd-controls-enabled="true" look-controls-enabled="true" 
         >
 
-<!--
+
         <a-entity position="0 -2 -3" rotation="-90 0 0">
           <a-entity geometry="primitive: box; height: 0.5; width: 0.1; depth: 0.05" material="color: #FCB514" position="0 0 0"></a-entity>
           <a-image map-look-controls="#camera" src="#img-compass-wheel"></a-image>
         </a-entity>
-        <
         <a-entity id="hud-map" position="0 2 -6" rotation="0 0 0">
           <a-entity 
 
@@ -73,7 +73,7 @@
             </a-image>
           </a-entity>
         </a-entity>
-        -->
+        
 
           <a-cursor></a-cursor>
 
