updated to latest tangram

--- a/examples/geocache/index.html
+++ b/examples/geocache/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Geocaching example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
     <script src="https://unpkg.com/aframe-sun-sky@3.0.3/dist/aframe-sun-sky.min.js"></script>
 
     <script src="./collider-check.js"></script>
@@ -77,6 +77,7 @@
             altitude-meter="heightmap: #terrain; text: #altitudeText;"
 
             tangram-map="
+            mapzenAPIKey: mapzen-sfnfVzq;
             style: #yaml-walkabout-style;
             pxToWorldRatio: 100;
             "
