--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -16,7 +16,7 @@
       <a-entity id="terrain" visible="true"
       
       geometry="width: 50; height: 50; segmentsWidth: 128; segmentsHeight: 128;"
-      material="color: #00ffff; shader: flat; side: both; transparent: true;"
+      material="color: #ffffff; shader: standard; side: both; transparent: true;"
 
       tangram-heightmap="
       mapzenAPIKey: mapzen-sfnfVzq;
