tangram only supports one instance per page

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Basic map example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -17,7 +17,7 @@
           position="-2 1 -4"
           geometry="primitive: plane; width: 3; height: 2;"
           
-          material="color: #ffffff; shader: standard; side: both; transparent: false;"
+          material="color: #ffffff; shader: flat; side: both; transparent: false;"
 
           tangram-map="
           mapzenAPIKey: mapzen-sfnfVzq;
@@ -40,7 +40,6 @@
           center: 15.8056, 47.7671;
           zoom: 13;
           pxToWorldRatio: 100;
-          canvasOffsetPx: 0;
           "
           >
         </a-entity>
