--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -20,6 +20,7 @@
 
       tangram-heightmap="
       mapzenAPIKey: mapzen-sfnfVzq;
+      canvas: #heightmap-canvas;
       style: #yaml-austria;
       center: 15.8056, 47.7671;
       zoom: 10;
