--- a/examples/index.html
+++ b/examples/index.html
@@ -24,6 +24,8 @@
     <h1>A-Frame Tangram Component</h1>
     <a href="basic/">Basic</a>
     <p>This is a basic map example.</p>
+    <a href="custom-style/">Custom Style</a>
+    <p>This is a custom styled map example.</p>
     <a href="heightmap/">Heightmap</a>
     <p>This is a heightmap example.</p>
     <a href="geocache/">Geocache</a>
