--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -13,7 +13,7 @@
         position="0 2 -2"
         geometry="primitive: plane; width: 7; height: 4;"
         
-        material="color: #ffffff; shader: flat; side: both; transparent: false;"
+        material="color: #ff00ff; shader: flat; side: both; transparent: false;"
 
         tangram-map="
         mapzenAPIKey: mapzen-sfnfVzq;
