--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -9,26 +9,29 @@
   <body>
     <a-scene>
       <a-assets>
+        <canvas id="map-canvas" width="2048" height="2048" crossorigin="anonymous"></canvas>
         <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
       </a-assets>
  
+      <a-sky color="#6EBAA7"></a-sky>
  
       <a-entity id="terrain" visible="true"
       
-      geometry="width: 50; height: 50; segmentsWidth: 128; segmentsHeight: 128;"
-      material="color: #ffffff; shader: standard; side: both; transparent: true;"
+      geometry="width: 40; height: 40; segmentsWidth: 64; segmentsHeight: 64;"
+      material="color: #ffffff; shader: flat; src: #map-canvas"
 
       tangram-heightmap="
+      canvas: #map-canvas;
       mapzenAPIKey: mapzen-sfnfVzq;
-      canvas: #heightmap-canvas;
       style: #yaml-austria;
       center: 15.8056, 47.7671;
       zoom: 10;
       canvasOffsetPx: 9999;
-      pxToWorldRatio: 30;
+      pxToWorldRatio: 20;
       " 
 
       rotation="-90 0 0"
+      position="0 5 0"
       >
       </a-entity>
 
