test canvas size

--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -18,7 +18,7 @@
       <a-entity id="terrain" visible="true"
       
       geometry="width: 40; height: 40; segmentsWidth: 64; segmentsHeight: 64;"
-      material="color: #ffffff; shader: flat; src: #map-canvas"
+      material="color: #ffffff; shader: flat; src: #map-canvas; width: 2048; height: 2048;"
 
       tangram-heightmap="
       canvas: #map-canvas;
