--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -9,7 +9,7 @@
   <body>
     <a-scene>
       <a-assets>
-        <canvas id="map-canvas" width="2048" height="2048" crossorigin="anonymous"></canvas>
+        <canvas id="map-canvas" crossorigin="anonymous"></canvas>
         <a-asset-item id="yaml-austria" src="assets/austria-satellite.yaml" />
       </a-assets>
  
@@ -31,7 +31,7 @@
       " 
 
       rotation="-90 0 0"
-      position="0 5 0"
+      position="0 0 0"
       >
       </a-entity>
 
