orking on mobile

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Basic map example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="lib/tangram.debug.js"></script>
+    <script src="../mlib/tangram.debug.js"></script>
   </head>
   <body>
     <a-scene debug>
@@ -13,7 +13,7 @@
         position="0 2.5 -2"
         geometry="primitive: plane; width: 7; height: 5;"
         
-        material="shader: flat; color: #fff"
+        material="shader: flat;"
 
         tangram-map="
         canvas: #map-canvas;
