removed old examples and updated to tangram 0.13

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Basic map example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="../mlib/tangram.debug.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
   </head>
   <body>
     <a-scene debug>
@@ -16,7 +16,6 @@
         material="shader: flat;"
 
         tangram-map="
-        canvas: #map-canvas;
         mapzenAPIKey: mapzen-sfnfVzq;
         center: 15.8056, 47.7671;
         zoom: 12;
