--- a/examples/custom-style/index.html
+++ b/examples/custom-style/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Custom style example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="../mlib/tangram.debug.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
   </head>
   <body>
     <a-scene>
