--- a/examples/heightmap/index.html
+++ b/examples/heightmap/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Heightmap example for Tangram component."></meta>
 
     <script src="../build.js"></script>
-    <script src="../mlib/tangram.debug.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -22,7 +22,6 @@
 
 
       tangram-heightmap="
-      canvas: #map-canvas;
       mapzenAPIKey: mapzen-sfnfVzq;
       style: #yaml-austria;
       center: 15.8056, 47.7671;
