--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -7,7 +7,7 @@
     <script src="https://mapzen.com/tangram/tangram.min.js"></script>
   </head>
   <body>
-    <a-scene debug>
+    <a-scene>
  
       <a-entity 
         position="0 2.5 -2"
