--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
     <a href="custom-style/">Custom Style</a>
     <p>This is a custom styled map example.</p>
     <a href="heightmap/">Heightmap</a>
-    <p>This is a heightmap example.</p>
+    <p>This is a heightmap example. May take some time to load...</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
