--- a/examples/index.html
+++ b/examples/index.html
@@ -24,10 +24,8 @@
     <h1>A-Frame Tangram Component</h1>
     <a href="basic/">Basic</a>
     <p>This is a basic map example.</p>
-    <a href="tron-style/">Custom Style</a>
-    <p>This is a custom (famous tron) styled map example.</p>
-    <a href="heightmap/">Heightmap</a>
-    <p>This is a heightmap example. May take some time to load...</p>
+    <a href="tron-style/">Tron Style</a>
+    <p>This is a custom styled map example.</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
