--- a/examples/hyposometric/index.html
+++ b/examples/hyposometric/index.html
@@ -9,23 +9,24 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="yaml-hyposometric" src="https://raw.githubusercontent.com/tangrams/terrain-demos/master/styles/hypsometric.yaml" />
+        <a-asset-item id="yaml-hyposometric" src="https://raw.githubusercontent.com/tangrams/terrain-demos/master/styles/terrarium-elevation.yaml" />
       </a-assets>
  
       <a-sky color="#6EBAA7"></a-sky>
  
       <!-- my Nexus5 chrashes with 1400 x 1400 settings -->
-      <a-entity id="terrain" visible="true"
+  <a-entity id="terrain" visible="true"
       
-      geometry="width: 20; height: 20; segmentsWidth: 40; segmentsHeight: 40;"
-      material="width: 1350; height: 1350;"
+      geometry="width: 50; height: 50; segmentsWidth: 80; segmentsHeight: 80;"
+      material="width: 1350; height: 1350; wireframe: false;"
 
 
       tangram-heightmap="
       mapzenAPIKey: mapzen-sfnfVzq;
       style: #yaml-hyposometric;
       center: 15.8056, 47.7671;
-      zoom: 8;
+      zoom: 9;
+      scaleFactor: 1;
       " 
 
       rotation="-90 0 0"
