--- a/examples/satellite/index.html
+++ b/examples/satellite/index.html
@@ -18,7 +18,7 @@
       <a-entity id="terrain" visible="true"
       
       geometry="width: 50; height: 50; segmentsWidth: 80; segmentsHeight: 80;"
-      material="width: 1350; height: 1350; wireframe: true;"
+      material="width: 1350; height: 1350; wireframe: false;"
 
 
       tangram-heightmap="
