--- a/examples/index.html
+++ b/examples/index.html
@@ -23,9 +23,11 @@
   <body>
     <h1>A-Frame Tangram Component</h1>
     <a href="basic/">Basic</a>
-    <p>This is a basic map example.</p>
-    <a href="tron-style/">Tron Style</a>
-    <p>This is a custom styled map example.</p>
+    <p>This is a basic terrain.</p>
+    <a href="hyposometric/">Hyposometric</a>
+    <p>Hyposometric predefined terrain</p>
+    <a href="airborne/">Airborne Imaginery</a>
+    <p>This is a custom styled map using airborne imaginary.</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
