--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,8 @@
     <p>Hyposometric predefined terrain</p>
     <a href="airborne/">Airborne Imaginery</a>
     <p>This is a custom styled map using airborne imaginary.</p>
+    <a href="tiles/">Terrain Tiles</a>
+    <p>Experimental.</p>
 
     <!-- GitHub Corner. -->
     <a href="https://github.com/mattrei/aframe-tangram-component" class="github-corner">
